// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adagrams App Highlights quit on two right-arrow presses 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│                                                                                                  │
│                         ╭────────────────╮    ╭─────────────╮    [31m╭──────╮[39m                        │
│                         │ Start New Game │    │ How to Play │    [31m│[39m [7m[31mQuit[39m[27m [31m│[39m                        │
│                         ╰────────────────╯    ╰─────────────╯    [31m╰──────╯[39m                        │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Adagrams App Highlights the next item on right-arrow press 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│                                                                                                  │
│                         ╭────────────────╮    ╭─────────────╮    [31m╭──────╮[39m                        │
│                         │ Start New Game │    │ [7mHow to Play[27m │    [31m│[39m [31mQuit[39m [31m│[39m                        │
│                         ╰────────────────╯    ╰─────────────╯    [31m╰──────╯[39m                        │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Adagrams App Quits if quit is selected 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│                                                                                                  │
│                         ╭────────────────╮    ╭─────────────╮    [31m╭──────╮[39m                        │
│                         │ Start New Game │    │ How to Play │    [31m│[39m [7m[31mQuit[39m[27m [31m│[39m                        │
│                         ╰────────────────╯    ╰─────────────╯    [31m╰──────╯[39m                        │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
[31mMainMenu: Received 'quit'.[39m"
`;

exports[`Adagrams App Renders correctly in the default state 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│                                                                                                  │
│                         ╭────────────────╮    ╭─────────────╮    [31m╭──────╮[39m                        │
│                         │ [7mStart New Game[27m │    │ How to Play │    [31m│[39m [31mQuit[39m [31m│[39m                        │
│                         ╰────────────────╯    ╰─────────────╯    [31m╰──────╯[39m                        │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Adagrams App Shows the help screen 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ Select \\"Start New Game\\" to play.                                                                 │
│                                                                                                  │
│                                                                                                  │
│ Choose the number of players, rounds, and seconds each person has available for guessing.        │
│ Then, enter the name of each player.                                                             │
│                                                                                                  │
│                                                                                                  │
│ Each round, a new set of 10 letters will be chosen. Each player has limited time to form words   │
│ out of the available letters.                                                                    │
│ Whoever has the highest scoring words across all rounds wins the game!                           │
│                                                                                                  │
│                                                                                                  │
│                                            ╭─────────╮                                           │
│                                            │ [7mGo Back[27m │                                           │
│                                            ╰─────────╯                                           │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
